fix: layout shift in advance copy (#384)
* fix: layout shift in advance copy

* update comment

* update implementation

* update implementation

* update sizing

* Update VerseAdvancedCopy.tsx

* add key

* use token

* use token

* fix typo

* use border

--- a/src/components/Verse/AdvancedCopy/VerseAdvancedCopy.module.scss
+++ b/src/components/Verse/AdvancedCopy/VerseAdvancedCopy.module.scss
@@ -15,3 +15,11 @@
   margin-bottom: var(--spacing-xsmall);
   color: var(--color-text-default);
 }
+
+// clone of checkbox properties
+.emptyCheckbox {
+  min-height: var(--spacing-medium);
+  border: 1px solid transparent;
+  margin-top: var(--spacing-micro);
+  margin-bottom: var(--spacing-micro);
+}
